push new jupyter notebook

--- a/UCB_5_1_Coupon_Study_EmilianoGaytan.ipynb
+++ b/UCB_5_1_Coupon_Study_EmilianoGaytan.ipynb
@@ -14,18 +14,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6Ijg5wUCTQYG"
-      },
-      "source": [
-        "**Objective**\n",
-        "**Business Objective:**\n",
-        "\n",
-        "“Will a customer accept the coupon?” The goal of this project is to use what you know about visualizations and probability distributions to distinguish between customers who accepted a driving coupon versus those who did not. Use the Practical Application 1 Jupyter Notebook Links to an external site.to complete this assignment."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "BMYfcKeDY85K"
       },
       "source": [
@@ -33,10 +21,21 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6Ijg5wUCTQYG"
+      },
+      "source": [
+        "**Business Objective:**\n",
+        "\n",
+        "“Will a customer accept the coupon?” The goal of this project is to use what you know about visualizations and probability distributions to distinguish between customers who accepted a driving coupon versus those who did not."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# %% [markdown]\n",
-        "# # Coupon Acceptance Analysis\n",
+        "# # Coupon Acceptance/Rejection Fetures Discovery/Analysis/Correlation\n",
         "#\n",
         "# This notebook analyzes the factors influencing coupon acceptance (Y=1) versus non-acceptance (Y=0).\n",
         "# It includes data cleaning, correlation analysis, and visualizations that compare key features between the two groups.\n",
@@ -51,10 +50,8 @@
         ""
       ],
       "metadata": {
-        "id": "hDODXpw4479g"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "8mRy0zopC7OI"
+      }
     },
     {
       "cell_type": "code",
