--- a/UCB_5_1_Coupon_Study_EmilianoGaytan.ipynb
+++ b/UCB_5_1_Coupon_Study_EmilianoGaytan.ipynb
@@ -41,8 +41,7 @@
         "**Findings:**\n",
         "  **Age** and certain time thresholds (e.g., **toCoupon_GEQ15min** and **toCoupon_GEQ25min**) are strong predictors of coupon acceptance.\n",
         "  **Some features, like **temperature**, are more related to coupon rejection.\n",
-        "\n",
-        ""
+        "\n"
       ]
     },
     {
@@ -63,7 +62,7 @@
       "metadata": {
         "id": "jKfK-jNz7CX3"
       },
-      "execution_count": 31,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -79,9 +78,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jdwQBYXvkdX5",
-        "outputId": "a3aa717d-597d-432e-9e04-3eb533dadf93"
+        "outputId": "8ab7619c-2c9c-4378-99b4-b007df5bd9e3"
       },
-      "execution_count": 28,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,220 +96,13 @@
       "source": [
         "# upload data csv files\n",
         "\n",
-        "uploaded = files.upload()  # Opens a file selection dialog\n"
+        "# uploaded = files.upload()\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 74
-        },
-        "id": "taoR53ZSinBz",
-        "outputId": "bd4a4ca5-59db-4d62-c10b-beabe1f45281"
+        "id": "taoR53ZSinBz"
       },
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "\n",
-              "     <input type=\"file\" id=\"files-ac3b012d-0349-4bad-ade7-18e1b88f7ac1\" name=\"files[]\" multiple disabled\n",
-              "        style=\"border:none\" />\n",
-              "     <output id=\"result-ac3b012d-0349-4bad-ade7-18e1b88f7ac1\">\n",
-              "      Upload widget is only available when the cell has been executed in the\n",
-              "      current browser session. Please rerun this cell to enable.\n",
-              "      </output>\n",
-              "      <script>// Copyright 2017 Google LLC\n",
-              "//\n",
-              "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-              "// you may not use this file except in compliance with the License.\n",
-              "// You may obtain a copy of the License at\n",
-              "//\n",
-              "//      http://www.apache.org/licenses/LICENSE-2.0\n",
-              "//\n",
-              "// Unless required by applicable law or agreed to in writing, software\n",
-              "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-              "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-              "// See the License for the specific language governing permissions and\n",
-              "// limitations under the License.\n",
-              "\n",
-              "/**\n",
-              " * @fileoverview Helpers for google.colab Python module.\n",
-              " */\n",
-              "(function(scope) {\n",
-              "function span(text, styleAttributes = {}) {\n",
-              "  const element = document.createElement('span');\n",
-              "  element.textContent = text;\n",
-              "  for (const key of Object.keys(styleAttributes)) {\n",
-              "    element.style[key] = styleAttributes[key];\n",
-              "  }\n",
-              "  return element;\n",
-              "}\n",
-              "\n",
-              "// Max number of bytes which will be uploaded at a time.\n",
-              "const MAX_PAYLOAD_SIZE = 100 * 1024;\n",
-              "\n",
-              "function _uploadFiles(inputId, outputId) {\n",
-              "  const steps = uploadFilesStep(inputId, outputId);\n",
-              "  const outputElement = document.getElementById(outputId);\n",
-              "  // Cache steps on the outputElement to make it available for the next call\n",
-              "  // to uploadFilesContinue from Python.\n",
-              "  outputElement.steps = steps;\n",
-              "\n",
-              "  return _uploadFilesContinue(outputId);\n",
-              "}\n",
-              "\n",
-              "// This is roughly an async generator (not supported in the browser yet),\n",
-              "// where there are multiple asynchronous steps and the Python side is going\n",
-              "// to poll for completion of each step.\n",
-              "// This uses a Promise to block the python side on completion of each step,\n",
-              "// then passes the result of the previous step as the input to the next step.\n",
-              "function _uploadFilesContinue(outputId) {\n",
-              "  const outputElement = document.getElementById(outputId);\n",
-              "  const steps = outputElement.steps;\n",
-              "\n",
-              "  const next = steps.next(outputElement.lastPromiseValue);\n",
-              "  return Promise.resolve(next.value.promise).then((value) => {\n",
-              "    // Cache the last promise value to make it available to the next\n",
-              "    // step of the generator.\n",
-              "    outputElement.lastPromiseValue = value;\n",
-              "    return next.value.response;\n",
-              "  });\n",
-              "}\n",
-              "\n",
-              "/**\n",
-              " * Generator function which is called between each async step of the upload\n",
-              " * process.\n",
-              " * @param {string} inputId Element ID of the input file picker element.\n",
-              " * @param {string} outputId Element ID of the output display.\n",
-              " * @return {!Iterable<!Object>} Iterable of next steps.\n",
-              " */\n",
-              "function* uploadFilesStep(inputId, outputId) {\n",
-              "  const inputElement = document.getElementById(inputId);\n",
-              "  inputElement.disabled = false;\n",
-              "\n",
-              "  const outputElement = document.getElementById(outputId);\n",
-              "  outputElement.innerHTML = '';\n",
-              "\n",
-              "  const pickedPromise = new Promise((resolve) => {\n",
-              "    inputElement.addEventListener('change', (e) => {\n",
-              "      resolve(e.target.files);\n",
-              "    });\n",
-              "  });\n",
-              "\n",
-              "  const cancel = document.createElement('button');\n",
-              "  inputElement.parentElement.appendChild(cancel);\n",
-              "  cancel.textContent = 'Cancel upload';\n",
-              "  const cancelPromise = new Promise((resolve) => {\n",
-              "    cancel.onclick = () => {\n",
-              "      resolve(null);\n",
-              "    };\n",
-              "  });\n",
-              "\n",
-              "  // Wait for the user to pick the files.\n",
-              "  const files = yield {\n",
-              "    promise: Promise.race([pickedPromise, cancelPromise]),\n",
-              "    response: {\n",
-              "      action: 'starting',\n",
-              "    }\n",
-              "  };\n",
-              "\n",
-              "  cancel.remove();\n",
-              "\n",
-              "  // Disable the input element since further picks are not allowed.\n",
-              "  inputElement.disabled = true;\n",
-              "\n",
-              "  if (!files) {\n",
-              "    return {\n",
-              "      response: {\n",
-              "        action: 'complete',\n",
-              "      }\n",
-              "    };\n",
-              "  }\n",
-              "\n",
-              "  for (const file of files) {\n",
-              "    const li = document.createElement('li');\n",
-              "    li.append(span(file.name, {fontWeight: 'bold'}));\n",
-              "    li.append(span(\n",
-              "        `(${file.type || 'n/a'}) - ${file.size} bytes, ` +\n",
-              "        `last modified: ${\n",
-              "            file.lastModifiedDate ? file.lastModifiedDate.toLocaleDateString() :\n",
-              "                                    'n/a'} - `));\n",
-              "    const percent = span('0% done');\n",
-              "    li.appendChild(percent);\n",
-              "\n",
-              "    outputElement.appendChild(li);\n",
-              "\n",
-              "    const fileDataPromise = new Promise((resolve) => {\n",
-              "      const reader = new FileReader();\n",
-              "      reader.onload = (e) => {\n",
-              "        resolve(e.target.result);\n",
-              "      };\n",
-              "      reader.readAsArrayBuffer(file);\n",
-              "    });\n",
-              "    // Wait for the data to be ready.\n",
-              "    let fileData = yield {\n",
-              "      promise: fileDataPromise,\n",
-              "      response: {\n",
-              "        action: 'continue',\n",
-              "      }\n",
-              "    };\n",
-              "\n",
-              "    // Use a chunked sending to avoid message size limits. See b/62115660.\n",
-              "    let position = 0;\n",
-              "    do {\n",
-              "      const length = Math.min(fileData.byteLength - position, MAX_PAYLOAD_SIZE);\n",
-              "      const chunk = new Uint8Array(fileData, position, length);\n",
-              "      position += length;\n",
-              "\n",
-              "      const base64 = btoa(String.fromCharCode.apply(null, chunk));\n",
-              "      yield {\n",
-              "        response: {\n",
-              "          action: 'append',\n",
-              "          file: file.name,\n",
-              "          data: base64,\n",
-              "        },\n",
-              "      };\n",
-              "\n",
-              "      let percentDone = fileData.byteLength === 0 ?\n",
-              "          100 :\n",
-              "          Math.round((position / fileData.byteLength) * 100);\n",
-              "      percent.textContent = `${percentDone}% done`;\n",
-              "\n",
-              "    } while (position < fileData.byteLength);\n",
-              "  }\n",
-              "\n",
-              "  // All done.\n",
-              "  yield {\n",
-              "    response: {\n",
-              "      action: 'complete',\n",
-              "    }\n",
-              "  };\n",
-              "}\n",
-              "\n",
-              "scope.google = scope.google || {};\n",
-              "scope.google.colab = scope.google.colab || {};\n",
-              "scope.google.colab._files = {\n",
-              "  _uploadFiles,\n",
-              "  _uploadFilesContinue,\n",
-              "};\n",
-              "})(self);\n",
-              "</script> "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saving coupons.csv to coupons (1).csv\n"
-          ]
-        }
-      ]
+      "execution_count": 44,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -328,14 +120,14 @@
         "# Read in the dataset to pd df\n",
         "cpn = pd.read_csv('/content/coupons.csv')"
       ],
-      "execution_count": 34,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "UpIxvD_onOgt",
-        "outputId": "f536c6c3-9867-47cf-886e-7bd96de70471",
+        "outputId": "2eb526de-90d3-4d46-aa96-d7eb715476d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -401,7 +193,7 @@
         "# %% [code]\n",
         "# Compute overall correlation matrix\n",
         "corr_matrix = cpn[numeric_cols].corr()\n",
-        "print(\"Overall Correlation with Y:\")\n",
+        "print(\"Overall Correlation with Y=1 Acceptanc\")\n",
         "print(corr_matrix['Y'].sort_values(ascending=False))\n",
         "\n",
         "# Identify top features by absolute correlation with Y (excluding Y itself)\n",
@@ -417,7 +209,7 @@
         "# - **toCoupon_GEQ15min**\n",
         "# - **toCoupon_GEQ25min**\n",
         "#\n",
-        "#  see: Plots of distribution for these features ( both yes/no coupon acceptance ).\n",
+        "#  see: Plots of distribution for these features ( both coupon acceptance/rejection ).\n",
         "\n",
         "# %% [PLOTS Seaborn  kdeplot]\n",
         "features_to_plot = ['age', 'toCoupon_GEQ15min', 'toCoupon_GEQ25min']\n",
@@ -443,7 +235,7 @@
         "\n",
         "# %% [code]\n",
         "negative_corr_features = corr_matrix['Y'].drop('Y').sort_values()\n",
-        "print(\"\\nFeatures sorted by correlation with Y (ascending):\")\n",
+        "print(\"\\nFeatures sorted by correlation with Y=1 Coupon Acceptance (ascending):\")\n",
         "print(negative_corr_features)\n",
         "\n",
         "top3_not_accept = negative_corr_features.head(3)\n",
@@ -499,13 +291,13 @@
         "\n",
         "\n"
       ],
-      "execution_count": 35,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overall Correlation with Y:\n",
+            "Overall Correlation with Y=1 Acceptanc\n",
             "Y                    1.000000\n",
             "toCoupon_GEQ25min    0.053682\n",
             "direction_same      -0.002065\n",
@@ -540,7 +332,7 @@
           "name": "stdout",
           "text": [
             "\n",
-            "Features sorted by correlation with Y (ascending):\n",
+            "Features sorted by correlation with Y=1 Coupon Acceptance (ascending):\n",
             "age                 -0.239270\n",
             "temperature         -0.039738\n",
             "toCoupon_GEQ15min   -0.034143\n",
