push new jupyter notebook

--- a/UCB_5_1_Coupon_Study_EmilianoGaytan.ipynb
+++ b/UCB_5_1_Coupon_Study_EmilianoGaytan.ipynb
@@ -276,7 +276,7 @@
         "# %% [markdown]\n",
         "# ## Categorical Variable Analysis\n",
         "#\n",
-        "# We also explore categorical variables and their relation to coupon acceptance using count plots.\n",
+        "# explore categorical variables and their relation to coupon acceptance using count plots.\n",
         "\n",
         "# %% [code]\n",
         "cat_cols = ['car', 'coupon', 'CoffeeHouse', 'CarryAway', 'RestaurantLessThan20', 'Restaurant20To50']\n",
